Added e-mail to authors

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: notification_permisions
 description: A plugin to check and ask for notification permissions
 version: 0.1.0
-author: Gonçalo Palma
+author: Gonçalo Palma <solid.goncalo@gmail.com>
 homepage: https://github.com/Vanethos/flutter_notification_permissions/
 issue_tracker: https://github.com/Vanethos/flutter_notification_permissions/issues
 
