--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: notification_permisions
-description: A plugin to check and ask for notification permissions
-version: 0.1.0+1
+description: A plugin to check and ask for notification permissions on Android and iOS
+version: 0.2.0
 author: Gonçalo Palma <solid.goncalo@gmail.com>
 homepage: https://github.com/Vanethos/flutter_notification_permissions/
 issue_tracker: https://github.com/Vanethos/flutter_notification_permissions/issues
