--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,65 @@
-os:
-- linux
-sudo: false
-addons:
-  apt:
-    # Flutter depends on /usr/lib/x86_64-linux-gnu/libstdc++.so.6 version GLIBCXX_3.4.18
-    sources:
-    - ubuntu-toolchain-r-test # if we don't specify this, the libstdc++6 we get is the wrong version
-    packages:
-    - libstdc++6
-    - fonts-droid
-before_script:
-- git clone https://github.com/flutter/flutter.git -b beta
-- ./flutter/bin/flutter doctor
-script:
-- ./flutter/bin/flutter test
+matrix:
+  include:
+    - os: linux
+      language: android
+      licenses:
+        - 'android-sdk-preview-license-.+'
+        - 'android-sdk-license-.+'
+        - 'google-gdk-license-.+'
+      android:
+        components:
+          - tools
+          - platform-tools
+          - build-tools-25.0.3
+          - android-25
+          - sys-img-armeabi-v7a-google_apis-25
+          - extra-android-m2repository
+          - extra-google-m2repository
+          - extra-google-android-support
+      jdk: oraclejdk8
+      sudo: false
+      addons:
+        apt:
+          # Flutter depends on /usr/lib/x86_64-linux-gnu/libstdc++.so.6 version GLIBCXX_3.4.18
+          sources:
+            - ubuntu-toolchain-r-test # if we don't specify this, the libstdc++6 we get is the wrong version
+          packages:
+            - libstdc++6
+            - fonts-droid
+      before_script:
+        - wget http://services.gradle.org/distributions/gradle-3.5-bin.zip
+        - unzip -qq gradle-3.5-bin.zip
+        - export GRADLE_HOME=$PWD/gradle-3.5
+        - export PATH=$GRADLE_HOME/bin:$PATH
+        - git clone https://github.com/flutter/flutter.git -b stable --depth 1
+      before_install:
+        - yes | sdkmanager "platforms;android-28"
+      script:
+        - ./flutter/bin/flutter -v build apk
+        - flutter/bin/flutter test test
+
+    - os: osx
+      language: generic
+      before_script:
+        - brew update
+        - brew install --HEAD usbmuxd
+        - brew unlink usbmuxd
+        - brew link usbmuxd
+        - brew install --HEAD libimobiledevice
+        - brew install ideviceinstaller
+        - brew install ios-deploy
+        - git clone https://github.com/flutter/flutter.git -b stable --depth 1
+      script:
+        - flutter/bin/flutter pub get
+        - gem install cocoapods
+        #- cd ios
+        #- pod setup
+        #- pod install
+        #- pod update
+        #- cd ..
+        - flutter/bin/flutter build ios --debug --no-codesign
+        - flutter/bin/flutter test test
+
 cache:
   directories:
-  - $HOME/.pub-cache
+    - $HOME/.pub-cache
