--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,18 +4,18 @@ version '1.0-SNAPSHOT'
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.android.tools.build:gradle:7.0.2'
     }
 }
 
 rootProject.allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
@@ -34,5 +34,5 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core:1.2.0'
+    implementation 'androidx.core:core:1.6.0'
 }
