--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: notification_permissions
 description: A plugin to check and ask for notification permissions on Android and iOS
-version: 0.5.0
-author: Gonçalo Palma <solid.goncalo@gmail.com>
+version: 0.6.0
 homepage: https://github.com/Vanethos/flutter_notification_permissions/
 issue_tracker: https://github.com/Vanethos/flutter_notification_permissions/issues
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
+  flutter: ">=1.12.0"
 
 dependencies:
   flutter:
@@ -18,5 +18,9 @@ dev_dependencies:
 
 flutter:
   plugin:
-    androidPackage: com.vanethos.notification_permissions
-    pluginClass: NotificationPermissionsPlugin
+    platforms:
+      android:
+        package: com.vanethos.notification_permissions
+        pluginClass: NotificationPermissionsPlugin
+      ios: 
+        pluginClass: NotificationPermissionsPlugin
