--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: notification_permissions
 description: A plugin to check and ask for notification permissions on Android and iOS
-version: 0.6.0
+version: 0.6.1
 homepage: https://github.com/Vanethos/flutter_notification_permissions/
 issue_tracker: https://github.com/Vanethos/flutter_notification_permissions/issues
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.12.0"
+  flutter: '>=1.12.0'
 
 dependencies:
   flutter:
@@ -22,5 +22,5 @@ flutter:
       android:
         package: com.vanethos.notification_permissions
         pluginClass: NotificationPermissionsPlugin
-      ios: 
+      ios:
         pluginClass: NotificationPermissionsPlugin
